Updated phone and loacation

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -8,7 +8,7 @@
   "email": "البريد الإلكتروني",
   "footerAbout": "متخصصون في خدمات التموين والتعهدات والخدمات اللوجستية مع التركيز على الجودة والكفاءة.",
   "emailAddress": "info@alsanober.com",
-  "phone": "+966 123 456 789",
-  "location": "الرياض، المملكة العربية السعودية",
+  "phone": "00218912171814",
+  "location": "ليبيا-طرابلس-السراج",
   "copyright": "© 2025 شركة الصنوبر العالمية. جميع الحقوق محفوظة."
 }
