--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -8,7 +8,7 @@
   "email": "Email",
   "footerAbout": "Specializing in catering, contracting, and logistical services with a focus on quality and efficiency.",
   "emailAddress": "info@alsanober.com",
-  "phone": "+966 123 456 789",
-  "location": "Riyadh, Saudi Arabia",
+  "phone": "00218912171814",
+  "location": "Libya - Tripoli - Alsarag",
   "copyright": "© 2025 Al-Sanober International Company. All rights reserved."
 }
